k8s/auth/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  labels:
    app: chat-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      imagePullSecrets:
        - name: valhalla-cr
      containers:
        - name: auth
          image: cr.yggdrasill.dev/chat/auth:11
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 500m
              memory: 1G
